<resources>
    <string name="app_name">Scanner2</string>
    <string name="abc_search_hint">Search…</string>
    <string name="already_member">I am already a member.</string>
    <string name="close">Close</string>
    <string name="col1">Product Name</string>
    <string name="col2">Quantoties(KGs)</string>
    <string name="col3">Rate/Qty</string>
    <string name="contact_us">Contact Us</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="farmer_details">Total Farmers</string>
    <string name="feedback">Product Feedback:</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="form_address">Address</string>
    <string name="form_email">Email ID</string>
    <string name="form_password">Password</string>
    <string name="form_phone">Phone No</string>
    <string name="form_username">User Name</string>
    <string name="home">Home</string>
    <string name="location">Locate Me :</string>
    <string name="mail_us">Chat Bot</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="my_profile">My Profile</string>
    <string name="myname">User Name</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="new_member">New Here ? Sign up instead.</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="not_set">Not set</string>
    <string name="open">Open</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="passworderror">The password must contain at least 8 character containing, at least one letter and one number</string>
    <string name="pesticide">Organic Pesticides</string>
    <string name="product_details">Product Details</string>
    <string name="rate">Rate Me:</string>
    <string name="scan">Scan Now</string>
    <string name="search_menu_title">Search</string>
    <string name="selected_language">English</string>
    <string name="share">Share</string>
    <string name="title_activity_maps">Maps</string>
    <string name="total_customers">Total Customers</string>
    <string name="total_farmers">Total Farmers</string>
    <string name="total_products">Total Products</string>
    <string name="try_again">try_again</string>
    <string name="uaddress">Address</string>
    <string name="uemail">Email ID</string>
    <string name="uphone">Phone No</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
    <string name="website">Website</string>
    <string name="whatsapp">Whats App</string>
    <string name="zxing_app_name">Barcode Scanner</string>
    <string name="zxing_button_ok">OK</string>
    <string name="feedbackerr">Please give the feedback</string>
    <string name="exit">Exit</string>
    <string name="logout">Log out</string>
    <string name="more">More</string>
    <string name="moreapp">More Apps</string>
    <string name="privacy">Privacy and Policy</string>
    <string name="givefeedback">Feedback</string>
</resources>