<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/ic_baseline_home_24" android:enabled="true" android:id="@+id/home" android:title="@string/home" app:showAsAction="ifRoom"/>
    <item android:icon="@drawable/ic_baseline_supervised_user_circle_24" android:enabled="true" android:id="@+id/my_profile" android:title="@string/my_profile" app:showAsAction="ifRoom"/>
    <item android:icon="@drawable/ic_baseline_info_24" android:enabled="true" android:id="@+id/about_us" android:title="@string/contact_us" app:showAsAction="ifRoom"/>
    <item android:icon="@drawable/ic_baseline_share_24" android:enabled="true" android:id="@+id/share" android:title="@string/share" app:showAsAction="ifRoom"/>
</menu>
